# srz-edi

./: CONTRIBUTING.md  CONTRIBUTING_EN.md  LICENSE  README.md  README_en.md  ci_cd.md  critical_nodes.md  docker-compose.build.yml  docker-compose.deploy.yml  docker-compose.yml
.github/workflows/: codeql-analysis.yml  docker-publish.yml
Backend/: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
Backend/compose/django/: Dockerfile  gunicorn.sh
Backend/compose/django/requirements/: base.txt  local.txt
Backend/config/: celery.py  urls.py
Backend/config/settings/: common.py  production.py
Backend/docker/django/: Dockerfile  gunicorn.sh
Backend/docker/django/requirements/: base.txt
Backend/osmchadjango/changeset/: filters.py  views.py
Backend/osmchadjango/changeset/management/commands/: import_file.py
Backend/osmchadjango/changeset/tests/: test_comment_views.py
Backend/osmchadjango/supervise/: models.py  urls.py  views.py
Backend/osmchadjango/supervise/migrations/: 0016_areaofinterest_objecttagarea.py  0017_areaofinterest_filterstatus.py
Backend/osmchadjango/supervise/tests/: test_views.py
Backend/osmchadjango/users/: views.py
Docs/: InstallGuide.md  UserManual.md
Frontend/: .env  .gitignore  Dockerfile  README.md  package-lock.json  package.json
Frontend/public/: index.html  manifest.json
Frontend/src/: App.js  i18n.js  index.css  index.js  setupTests.js
Frontend/src/components/: ChangesetList.js  ChangesetList.test.js  DeleteFilters.js  DeleteFilters.test.js  Error.js  Error.test.js  FilterList.js  FilterList.test.js  (+15 more)
(+9 files in other folders)
